# app/Models/LegalDocument.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class LegalDocument extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'image',
+        'title',
+        'is_active',
+    ];
+
+    /**
+     * Get the full URL for the image.
+     */
+    public function getImageUrlAttribute()
+    {
+        return $this->image ? url('storage/' . $this->image) : null;
+    }
+
+    protected $appends = ['image_url'];
+}
